swagger for full case study added
